[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltaMP"
version = "0.1.1"
description = "A lightweight local music player built with PyQt6"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "sudoercat" }
]
dependencies = [
    "PyQt6",
]

[project.scripts]
voltamp = "volta.main:main"
