[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voltaMP"
version = "0.1.5"
description = "A lightweight local music player built with PyQt6"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "sudoercat" }
]
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
    "Flask",
]

[project.scripts]
voltamp = "volta:start_app"

[tool.setuptools]
py-modules = ["volta"]
